[gd_scene load_steps=18 format=4 uid="uid://c3t1vx04yasyp"]

[ext_resource type="Script" uid="uid://be6ekcmtyfcrx" path="res://world/level.gd" id="1_yb76r"]
[ext_resource type="PackedScene" uid="uid://b3w5r4vookj4s" path="res://UI/level_HUD.tscn" id="3_3tig8"]
[ext_resource type="Texture2D" uid="uid://b508jx3dpytx8" path="res://asset/Treasure Hunters/Pirate Ship/Sprites/Tilesets/Terrain and Back Wall (32x32).png" id="4_rum68"]
[ext_resource type="PackedScene" uid="uid://cvc5i2620paop" path="res://world/background_objects/candle.tscn" id="5_seo08"]
[ext_resource type="PackedScene" uid="uid://dsamr2xxuqs5y" path="res://world/pirate_ship_filter.tscn" id="6_d4tw6"]
[ext_resource type="TileSet" uid="uid://dw66ve3yqcms5" path="res://world/pirate_ship_interior_tileset.tres" id="7_iebk4"]
[ext_resource type="PackedScene" uid="uid://cxd8utj06nd2h" path="res://world/gem_manager.tscn" id="8_cgsgu"]
[ext_resource type="Resource" uid="uid://dc7n5gmbtbqsk" path="res://gems/gem_info/pierce_powerup.tres" id="9_12fb7"]
[ext_resource type="PackedScene" uid="uid://cvroqysgpvf6u" path="res://gems/Gem.tscn" id="9_ogi1u"]
[ext_resource type="Resource" uid="uid://bpq85jnyrhdc2" path="res://gems/gem_info/scope.tres" id="11_yceia"]
[ext_resource type="Resource" uid="uid://lolpuixwjb8u" path="res://gems/gem_info/gold_coin.tres" id="12_6awlo"]
[ext_resource type="Resource" uid="uid://bjxfrsxpn3sa0" path="res://gems/gem_info/regular_ruby.tres" id="13_gr4aa"]
[ext_resource type="Resource" uid="uid://tdn31p45ulk7" path="res://gems/gem_info/regular_diamond.tres" id="14_lcmb2"]
[ext_resource type="PackedScene" uid="uid://c5avxrb5wnqor" path="res://actors/Cannon.tscn" id="15_42p6o"]
[ext_resource type="PackedScene" uid="uid://bt2wiosukdqan" path="res://world/countdown_timer.tscn" id="16_rr44s"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3uihl"]
texture = ExtResource("4_rum68")
texture_region_size = Vector2i(32, 32)
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
5:1/0 = 0
7:1/0 = 0
8:1/0 = 0
10:1/0 = 0
11:1/0 = 0
13:1/0 = 0
14:1/0 = 0
16:1/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
5:2/0 = 0
7:2/0 = 0
8:2/0 = 0
10:2/0 = 0
11:2/0 = 0
13:2/0 = 0
14:2/0 = 0
16:2/0 = 0
17:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
5:3/0 = 0
7:4/0 = 0
8:4/0 = 0
10:4/0 = 0
11:4/0 = 0
13:4/0 = 0
14:4/0 = 0
16:4/0 = 0
17:4/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
5:5/0 = 0
7:5/0 = 0
8:5/0 = 0
10:5/0 = 0
11:5/0 = 0
13:5/0 = 0
14:5/0 = 0
16:5/0 = 0
17:5/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
5:7/0 = 0
7:7/0 = 0
8:7/0 = 0
10:7/0 = 0
11:7/0 = 0
13:7/0 = 0
14:7/0 = 0
16:7/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
5:8/0 = 0
7:8/0 = 0
8:8/0 = 0
10:8/0 = 0
11:8/0 = 0
13:8/0 = 0
14:8/0 = 0
16:8/0 = 0
17:8/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
5:9/0 = 0
7:10/0 = 0
8:10/0 = 0
10:10/0 = 0
11:10/0 = 0
13:10/0 = 0
14:10/0 = 0
16:10/0 = 0
17:10/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
5:11/0 = 0
7:11/0 = 0
8:11/0 = 0
10:11/0 = 0
11:11/0 = 0
13:11/0 = 0
14:11/0 = 0
16:11/0 = 0
17:11/0 = 0

[sub_resource type="TileSet" id="TileSet_kf121"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_3uihl")

[node name="Node2D" type="Node2D"]
script = ExtResource("1_yb76r")
level_name = "Pierce Test"
total_time_sec = 25
total_hook_count = 3
score_threshold = 8000

[node name="LevelHUD" parent="." instance=ExtResource("3_3tig8")]
visible = false

[node name="Background" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAABAAMAAAABAAcAAAABAAUAAAABAAkAAAADAAcAAAABAAkAAAAMAAcAAAADAAkAAAAOAAUAAAADAAkAAAAOAAMAAAADAAcAAAAMAAEAAAADAAcAAAADAAEAAAABAAcAAAAEAAEAAAACAAcAAAAFAAEAAAACAAcAAAAGAAEAAAACAAcAAAAHAAEAAAACAAcAAAAIAAEAAAACAAcAAAAJAAEAAAACAAcAAAAKAAEAAAACAAcAAAALAAEAAAACAAcAAAAOAAQAAAADAAgAAAAMAAYAAAADAAgAAAAMAAIAAAADAAgAAAABAAQAAAABAAgAAAADAAIAAAABAAgAAAADAAYAAAABAAgAAAAEAAcAAAACAAkAAAAFAAcAAAACAAkAAAAGAAcAAAACAAkAAAAHAAcAAAACAAkAAAAIAAcAAAACAAkAAAAJAAcAAAACAAkAAAAKAAcAAAACAAkAAAALAAcAAAACAAkAAAANAAUAAAACAAkAAAACAAUAAAACAAkAAAACAAMAAAACAAcAAAANAAMAAAACAAcAAAADAAUAAAAIAAcAAAAMAAMAAAACAAgAAAADAAMAAAAIAAgAAAAMAAUAAAAHAAcAAAACAAQAAAACAAgAAAADAAQAAAACAAgAAAAEAAIAAAAHAAcAAAAEAAMAAAABAAcAAAAEAAQAAAABAAgAAAAEAAUAAAABAAkAAAAEAAYAAAAHAAgAAAAFAAYAAAACAAcAAAAGAAYAAAACAAcAAAAHAAYAAAAIAAgAAAAIAAYAAAAHAAgAAAAJAAYAAAACAAcAAAAKAAYAAAACAAcAAAALAAYAAAAIAAgAAAALAAUAAAADAAkAAAALAAQAAAADAAgAAAALAAMAAAADAAcAAAALAAIAAAAIAAcAAAAMAAQAAAACAAgAAAANAAQAAAACAAgAAAAKAAIAAAACAAkAAAAJAAIAAAACAAkAAAAIAAIAAAAHAAcAAAAHAAIAAAAIAAcAAAAGAAIAAAACAAkAAAAFAAIAAAACAAkAAAAHAAMAAAACAAcAAAAHAAQAAAACAAgAAAAHAAUAAAACAAkAAAAIAAUAAAACAAkAAAAIAAQAAAACAAgAAAAIAAMAAAACAAcAAAAFAAMAAAACAAcAAAAFAAQAAAACAAgAAAAFAAUAAAACAAkAAAAGAAMAAAACAAcAAAAGAAQAAAACAAgAAAAGAAUAAAACAAkAAAAJAAMAAAACAAcAAAAJAAQAAAACAAgAAAAJAAUAAAACAAkAAAAKAAMAAAACAAcAAAAKAAQAAAACAAgAAAAKAAUAAAACAAkAAAA=")
tile_set = SubResource("TileSet_kf121")

[node name="Node2D" type="Node2D" parent="."]

[node name="Candle" parent="Node2D" instance=ExtResource("5_seo08")]
position = Vector2(128, 144)

[node name="Candle2" parent="Node2D" instance=ExtResource("5_seo08")]
position = Vector2(384, 144)

[node name="PirateShipFilter" parent="." instance=ExtResource("6_d4tw6")]

[node name="MainLevel" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAGAACAAIAAAAAAAEAGAACAAIAAAAAAAIAGAAHAAEAAAAAAAMAGAADAAIAAAABAAAAGAACAAIAAAABAAgAGAACAAIAAAACAAAAGAAHAAEAAAACAAgAGAAHAAIAAAADAAAAGAACAAMAAAAEAAAAGAACAAMAAAAEAAgAGAACAAEAAAAFAAAAGAACAAMAAAAFAAgAGAACAAEAAAAGAAAAGAACAAMAAAAGAAgAGAACAAEAAAAHAAAAGAACAAMAAAAIAAAAGAACAAMAAAAJAAAAGAACAAMAAAAJAAgAGAACAAEAAAAKAAAAGAACAAMAAAAKAAgAGAACAAEAAAALAAAAGAACAAMAAAALAAgAGAACAAEAAAAMAAAAGAACAAMAAAAMAAgAGAACAAEAAAANAAAAGAAIAAEAAAANAAgAGAAIAAIAAAAOAAAAGAACAAIAAAAOAAgAGAACAAIAAAAPAAEAGAACAAIAAAAPAAIAGAAIAAEAAAAPAAMAGAABAAIAAAAPAAQAGAABAAIAAAAPAAYAGAAIAAIAAAAPAAcAGAACAAIAAAAPAAgAGAACAAIAAAAHAAgAGAADAAEAAAAIAAgAGAABAAEAAAAPAAUAGAABAAIAAAAAAAQAGAADAAIAAAAAAAUAGAADAAIAAAAAAAYAGAAHAAIAAAAAAAcAGAACAAIAAAAAAAgAGAACAAIAAAAOAAEAGAACAAIAAAAPAAAAGAACAAIAAAANAAIAGAABAAMAAAANAAEAGAABAAIAAAAOAAIAGAACAAMAAAABAAEAGAACAAIAAAACAAEAGAADAAIAAAACAAIAGAADAAMAAAABAAIAGAACAAMAAAADAAgAGAACAAEAAAABAAcAGAACAAIAAAACAAYAGAADAAEAAAANAAYAGAABAAEAAAAOAAcAGAACAAIAAAABAAYAGAACAAEAAAAOAAYAGAACAAEAAAACAAcAGAADAAIAAAANAAcAGAABAAIAAAAGAAIAAAADAAIAAAAFAAIAAAABAAIAAAAJAAIAAAABAAIAAAAKAAIAAAADAAIAAAADAAQAAAABAAIAAAAEAAQAAAADAAIAAAALAAQAAAABAAIAAAAMAAQAAAAEAAIAAAA=")
tile_set = ExtResource("7_iebk4")

[node name="GemManager" parent="." instance=ExtResource("8_cgsgu")]

[node name="multiplier1" parent="GemManager" instance=ExtResource("9_ogi1u")]
position = Vector2(256, 136)
gem_info = ExtResource("9_12fb7")

[node name="scope1" parent="GemManager" instance=ExtResource("9_ogi1u")]
position = Vector2(64, 144)
gem_info = ExtResource("11_yceia")
is_moving = true

[node name="MoveManager" parent="GemManager/scope1" index="3"]
direction = Vector2(0, -1)

[node name="scope2" parent="GemManager" instance=ExtResource("9_ogi1u")]
position = Vector2(448, 144)
gem_info = ExtResource("11_yceia")
is_moving = true

[node name="MoveManager" parent="GemManager/scope2" index="3"]
direction = Vector2(0, -1)

[node name="silver1" parent="GemManager" instance=ExtResource("9_ogi1u")]
position = Vector2(341, 80)
gem_info = ExtResource("14_lcmb2")

[node name="silver2" parent="GemManager" instance=ExtResource("9_ogi1u")]
position = Vector2(173, 80)
gem_info = ExtResource("14_lcmb2")

[node name="gold1" parent="GemManager" instance=ExtResource("9_ogi1u")]
position = Vector2(192, 56)
gem_info = ExtResource("12_6awlo")

[node name="gold3" parent="GemManager" instance=ExtResource("9_ogi1u")]
position = Vector2(193, 115)

[node name="gold4" parent="GemManager" instance=ExtResource("9_ogi1u")]
position = Vector2(201, 134)

[node name="gold5" parent="GemManager" instance=ExtResource("9_ogi1u")]
position = Vector2(213, 155)

[node name="gold6" parent="GemManager" instance=ExtResource("9_ogi1u")]
position = Vector2(321, 115)

[node name="gold7" parent="GemManager" instance=ExtResource("9_ogi1u")]
position = Vector2(311, 134)

[node name="gold8" parent="GemManager" instance=ExtResource("9_ogi1u")]
position = Vector2(301, 155)

[node name="gold2" parent="GemManager" instance=ExtResource("9_ogi1u")]
position = Vector2(320, 56)
gem_info = ExtResource("12_6awlo")

[node name="ruby1" parent="GemManager" instance=ExtResource("9_ogi1u")]
position = Vector2(304, 248)
gem_info = ExtResource("13_gr4aa")

[node name="ruby2" parent="GemManager" instance=ExtResource("9_ogi1u")]
position = Vector2(208, 248)
gem_info = ExtResource("13_gr4aa")

[node name="diamond1" parent="GemManager" instance=ExtResource("9_ogi1u")]
position = Vector2(145, 115)
gem_info = ExtResource("14_lcmb2")

[node name="diamond2" parent="GemManager" instance=ExtResource("9_ogi1u")]
position = Vector2(364, 116)
gem_info = ExtResource("14_lcmb2")

[node name="Cannon" parent="." instance=ExtResource("15_42p6o")]
position = Vector2(256, 264)

[node name="CountdownTimer" parent="." instance=ExtResource("16_rr44s")]

[connection signal="score_calculated" from="GemManager" to="." method="_on_gem_manager_score_calculated"]
[connection signal="timeout" from="CountdownTimer" to="." method="_on_countdown_timer_timeout"]

[editable path="GemManager/scope1"]
[editable path="GemManager/scope2"]
